--- a/index.html
+++ b/index.html
@@ -8,34 +8,41 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <form id="login-form" class="hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <button>Log In</button>
-    </form>
-    <h2 id="clock">00 : 00 : 00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-      <input
-        type="text"
-        placeholder="Write a To Do and please Enter"
-        required
-      />
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
+    <div id="backGround">
+      <div id="Section">
+        <h2 id="clock">00:00:00</h2>
+        <h1 id="greeting" class="hidden"></h1>
+        <form id="login-form" class="hidden">
+          <input
+            id="login-input"
+            required
+            maxlength="15"
+            type="text"
+            placeholder="What is your name?"
+          />
+        </form>
+        <div id="toDoContainer">
+          <form id="todo-form">
+            <input
+              id="todo-input"
+              type="text"
+              placeholder="Write a To Do and please Enter"
+              required
+            />
+          </form>
+          <ul id="todo-list"></ul>
+        </div>
+        <div id="quote">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <script src="./js/greeting.js"></script>
+      <script src="./js/clock.js"></script>
+      <script src="./js/quotes.js"></script>
+      <script src="./js/background.js"></script>
+      <script src="./js/todo.js"></script>
+      <script src="./js/weather.js"></script>
     </div>
-    <script src="./js/greeting.js"></script>
-    <script src="./js/clock.js"></script>
-    <script src="./js/quotes.js"></script>
-    <script src="./js/background.js"></script>
-    <script src="./js/todo.js"></script>
-    <script src="./js/weather.js"></script>
   </body>
 </html>
