--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="backGround">
+      <p id="geo-title"></p>
       <div id="Section">
         <h2 id="clock">00:00:00</h2>
         <h1 id="greeting" class="hidden"></h1>
